--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.7.2",
     "pg": "^8.5.0",
     "sass": "^1.35.1"
   },
